--- a/ansible_aws/vars/provider.yml
+++ b/ansible_aws/vars/provider.yml
@@ -1,5 +1,6 @@
 ---
 aws_state: present #absent
+#aws_state: absent #present
 aws_region: "us-east-1"
 aws_region_az: "us-east-1a"
 aws_cidr_block: "10.30.0.0/16"
