--- a/ansible_aws/aws_destroy.yml
+++ b/ansible_aws/aws_destroy.yml
@@ -4,7 +4,7 @@
     - provider
   vars:
     cloud_infrastructure: false
-    destroy: "{{ ansible_env.DESTROY_AWS | default(aws_state) }}"
+    destroy: "true"
   vars_files:
     - "vars/default.yml"
     - "vars/provider.yml"
