--- a/ansible_aws/roles/aws/tasks/destroy_save.yml
+++ b/ansible_aws/roles/aws/tasks/destroy_save.yml
@@ -1,19 +1,28 @@
----
-- name: "Remove host and IP in hosts file"
-  file:
-    path: "{{playbook_dir}}/hosts"
-    state: "absent"
-    force: yes
-  register: AnsibleHostFile
-
-- name: "Remove generated data"
-  file: 
-    path: "{{playbook_dir}}/owncloud_data.yml"
-    state: "absent"
-  when: AnsibleHostFile|success
-
-- name: "Remove log data"
-  file: 
-    path: "{{playbook_dir}}/ansible.log"
-    state: "absent"
-  when: AnsibleHostFile|success
+- block:
+    - name: "Remove host and IP in hosts file"
+      file:
+        path: "{{playbook_dir}}/hosts"
+        state: "absent"
+        force: yes
+      register: AnsibleHostFile
+    
+    - name: "Remove generated data"
+      file: 
+        path: "{{playbook_dir}}/owncloud_data.yml"
+        state: "absent"
+      when: AnsibleHostFile|success
+    
+    - name: "Remove log data"
+      file: 
+        path: "{{playbook_dir}}/ansible.log"
+        state: "absent"
+      when: AnsibleHostFile|success
+      
+  rescue:
+    - name: "Send messages"
+      include_role:
+        name: messages
+      vars:
+        slack_message: "Error on files removal"
+    - fail:
+        msg: "Error on files removal"
