--- a/ansible_aws/roles/aws/tasks/destroy.yml
+++ b/ansible_aws/roles/aws/tasks/destroy.yml
@@ -4,3 +4,9 @@
 - include: ./destroy_sg.yml
 - include: ./destroy_vpc.yml
 - include: ./destroy_save.yml
+
+- name: "Send messages"
+  include_role:
+    name: messages
+  vars:
+    slack_message: "AWS infrastructure removed"
