--- a/ansible_aws/roles/aws/tasks/ec2.yml
+++ b/ansible_aws/roles/aws/tasks/ec2.yml
@@ -1,74 +1,85 @@
-- name: "Creating a OwnCloud instance"
-  ec2:
-    state: "{{aws_state}}"
-    key_name: owncloud
-    region: "{{aws_region}}"
-    group_id: "{{OwnCloudVpcId}}"
-    instance_type: "{{aws_instance_type}}"
-    image: "{{aws_instance_ami}}"
-    wait: yes
-    wait_timeout: 500
-    count: 1
-    instance_tags:
-       App: "OwnCloud"
-       Name: "OwnCloudInstance"
-    vpc_subnet_id: "{{OwnCloudSubnetId}}"
-    assign_public_ip: yes
-  register: OwnCloudEC2
-  
-- debug:
-    msg: "{{OwnCloudEC2}}"
-  when: run_in_debug == true
+- block:
+    - name: "Creating a OwnCloud instance"
+      ec2:
+        state: "{{aws_state}}"
+        key_name: owncloud
+        region: "{{aws_region}}"
+        group_id: "{{OwnCloudVpcId}}"
+        instance_type: "{{aws_instance_type}}"
+        image: "{{aws_instance_ami}}"
+        wait: yes
+        wait_timeout: 500
+        count: 1
+        instance_tags:
+            App: "OwnCloud"
+            Name: "OwnCloudInstance"
+        vpc_subnet_id: "{{OwnCloudSubnetId}}"
+        assign_public_ip: yes
+      register: OwnCloudEC2
 
-- name: "Wait instance SSH"
-  wait_for:
-    host: "{{ item.public_dns_name }}"
-    port: 22
-    delay: 60
-    timeout: 320
-    state: started
-  with_items: "{{ OwnCloudEC2.instances }}"
+    - debug:
+        msg: "{{OwnCloudEC2}}"
+      when: run_in_debug == true
 
-- name: "Save Security Group ID"
-  set_fact:
-    OwnCloudEC2Id: "{{ OwnCloudEC2.instance_ids }}"
+    - name: "Wait instance SSH"
+      wait_for:
+        host: "{{ item.public_dns_name }}"
+        port: 22
+        delay: 60
+        timeout: 320
+        state: started
+      with_items: "{{ OwnCloudEC2.instances }}"
 
-- name: "Create a EIP"
-  ec2_eip:
-    state: "{{aws_state}}"
-    region: "{{aws_region}}"
-    in_vpc: yes
-    release_on_disassociation: yes
-    device_id: "{{item}}"
-  with_items: 
-    - "{{OwnCloudEC2Id}}"
-  register: OwnCloudEIP
-  ignore_errors: true
+    - name: "Save EC2 IDs"
+      set_fact:
+          OwnCloudEC2Id: "{{ OwnCloudEC2.instance_ids }}"
 
-- name: "Rollback OwnCloud instance"
-  ec2:
-    state: "absent"
-    instance_ids: "{{OwnCloudEC2Id}}"
-  when: OwnCloudEIP|failed
+    - name: "Create a EIP"
+      ec2_eip:
+        state: "{{aws_state}}"
+        region: "{{aws_region}}"
+        in_vpc: yes
+        release_on_disassociation: yes
+        device_id: "{{item}}"
+      with_items: 
+        - "{{OwnCloudEC2Id}}"
+      register: OwnCloudEIP
+      ignore_errors: true
     
-- debug:
-    msg: "{{OwnCloudEIP}}"
-  when: run_in_debug == true
+    - debug:
+        msg: "{{OwnCloudEIP}}"
+      when: run_in_debug == true
+    
+    - name: "Save EIP ID"
+      set_fact:
+        OwnCloudEIPId: "{{ item.item }}"
+      with_items: "{{ OwnCloudEIP.results }}"
+    
+    - debug:
+        msg: "{{OwnCloudEIPId}}"
+      when: run_in_debug == true
+    
+    - name: "Save EIP IP"
+      set_fact:
+        OwnCloudEIPIP: "{{ item.public_ip }}"
+      with_items: "{{ OwnCloudEIP.results }}"
+    
+    - debug:
+        msg: "{{OwnCloudEIPIP}}"
+      when: run_in_debug == true
 
-- name: "Save EIP ID"
-  set_fact:
-    OwnCloudEIPId: "{{ item.item }}"
-  with_items: "{{ OwnCloudEIP.results }}"
+  rescue:
+    - name: "Send messages"
+      include_role:
+        name: messages
+      vars:
+        slack_message: "Error in EC2 creation, initializing rollback"
 
-- debug:
-    msg: "{{OwnCloudEIPId}}"
-  when: run_in_debug == true
-
-- name: "Save EIP IP"
-  set_fact:
-    OwnCloudEIPIP: "{{ item.public_ip }}"
-  with_items: "{{ OwnCloudEIP.results }}"
-
-- debug:
-    msg: "{{OwnCloudEIPIP}}"
-  when: run_in_debug == true
+    - name: "Rollback OwnCloud instance"
+      ec2:
+        state: "absent"
+        region: "{{aws_region}}"
+        instance_ids: "{{OwnCloudEC2Id}}"
+    
+    - fail:
+        msg: "Error in EC2 creation"
